# python_modern_template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
docs/: api-reference.md  code-style.md  developer-guide.md  getting-started.md  index.md  release-process.md  testing.md
src/python_modern_template/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
